--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "description": "WordPress Theme Base",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "start": "gulp watch-bs"
+  },
   "engines": {
     "npm": ">=2.1.8"
   },
@@ -24,23 +26,25 @@
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "autoprefixer": "^9.5.1",
-    "gulp-babel": "^8.0.0",
-    "gulp-postcss": "^8.0.0",
-    "gulp-zip": "^5.0.0",
     "browser-sync": "^2.26.3",
     "del": "^4.1.0",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.0.0",
     "gulp-concat": "^2.6.1",
+    "gulp-if": "^3.0.0",
     "gulp-ignore": "^2.0.2",
     "gulp-imagemin": "^5.0.3",
     "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
-    "gulp-watch": "^5.0.1"
+    "gulp-watch": "^5.0.1",
+    "gulp-zip": "^5.0.0",
+    "yargs": "^14.0.0"
   }
 }
