--- a/gulpconfig.json
+++ b/gulpconfig.json
@@ -13,7 +13,7 @@
 		"node": "./node_modules",
 		"dev": "./src",
 		"dist": "./dist",
-		"distprod": "./dist-product",
+		"packaged": "./packaged",
 		"vendor": ""
 	}
 }
