--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "WordPress Theme Base",
   "main": "index.js",
   "scripts": {
-    "start": "gulp watch-bs"
+    "start": "gulp watch-bs",
+    "bundle": "gulp bundle"
   },
   "engines": {
     "npm": ">=2.1.8"
@@ -33,7 +34,6 @@
     "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.0.0",
     "gulp-concat": "^2.6.1",
-    "gulp-if": "^3.0.0",
     "gulp-ignore": "^2.0.2",
     "gulp-imagemin": "^5.0.3",
     "gulp-plumber": "^1.2.1",
@@ -43,8 +43,6 @@
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
-    "gulp-watch": "^5.0.1",
-    "gulp-zip": "^5.0.0",
-    "yargs": "^14.0.0"
+    "gulp-zip": "^5.0.0"
   }
 }
